--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,11 +29,13 @@
                 android:foreground="@drawable/background_gradient"/>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:animateLayoutChanges="true"
                 android:gravity="center"
                 android:orientation="vertical"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.7"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,17 +59,16 @@
                     android:background="@color/transparent"
                     android:orientation="vertical"
                     android:animateLayoutChanges="true"
-                    android:paddingHorizontal="10dp"
-                    android:layout_marginHorizontal="55dp">
+                    android:paddingHorizontal="10dp">
 
-                    <TextView
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/login_fields_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
                         android:visibility="gone"/>
 
-                    <EditText
+                    <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/email_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -76,7 +77,7 @@
                         android:hint="digite seu email"
                         android:inputType="textEmailAddress"/>
 
-                    <EditText
+                    <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/password_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -85,7 +86,7 @@
                         android:hint="digite sua senha"
                         android:inputType="textPassword"/>
 
-                    <EditText
+                    <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/password_check_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -95,7 +96,7 @@
                         android:inputType="textPassword"
                         android:visibility="gone" />
 
-                    <EditText
+                    <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/login_session_id_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -115,7 +116,7 @@
                         android:layout_gravity="center_horizontal"
                         android:visibility="gone">
 
-                        <Button
+                        <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/back_to_login_button"
                             android:layout_width="0dp"
                             android:layout_weight="1"
@@ -190,7 +191,7 @@
                     android:animateLayoutChanges="true"
                     app:layout_constraintTop_toBottomOf="@id/fields_layout">
 
-                    <Button
+                    <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/start_register_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -198,7 +199,7 @@
                         android:background="@drawable/secondary_button"
                         android:onClick="didTapWannaRegister"/>
 
-                    <Button
+                    <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/join_as_guest_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
