--- a/app/src/main/res/layout/fragment_home_reactions.xml
+++ b/app/src/main/res/layout/fragment_home_reactions.xml
@@ -11,34 +11,29 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/darkGray_161616"
-            android:animateLayoutChanges="true"
-            app:layout_constraintStart_toEndOf="@id/current_session_progress"
-            app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="match_parent"
+        android:background="@color/darkGray_161616">
 
             <LinearLayout
                 android:id="@+id/user_session"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="30dp"
                 android:animateLayoutChanges="true"
-                android:gravity="center_horizontal">
+                android:gravity="center_horizontal|top"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/current_session_progress"
+                app:layout_constraintEnd_toEndOf="parent">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/session_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="30dp"
                     android:text="Sessão atual: "/>
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/current_session"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -50,14 +45,18 @@
 
             <LinearLayout
                 android:id="@+id/join_session_fields"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="30dp"
-                android:layout_marginHorizontal="@dimen/horizontalMargin"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.7"
+                app:layout_constraintTop_toBottomOf="@id/user_session"
+                app:layout_constraintStart_toEndOf="@id/current_session_progress"
+                app:layout_constraintEnd_toEndOf="parent">
 
-                <EditText
+                <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/session_code_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -103,17 +102,23 @@
             <LinearLayout
                 android:id="@+id/reaction_buttons"
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/verticalMargin"
                 android:layout_marginHorizontal="@dimen/horizontalMargin"
                 android:weightSum="3"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.7"
+                app:layout_constraintTop_toBottomOf="@id/join_session_fields"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/current_session_progress"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <FrameLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/buttonHorizontalMargin">
 
                     <br.com.simplepass.loading_button_lib.customViews.CircularProgressImageButton
@@ -125,7 +130,7 @@
                         android:adjustViewBounds="true"
                         android:src="@drawable/ic_in_love"
                         android:onClick="didTapGreenButton"
-                        app:spinning_bar_padding="10dp"
+                        app:spinning_bar_padding="15dp"
                         app:spinning_bar_color="@color/green" />
 
                 </FrameLayout>
@@ -134,7 +139,7 @@
                 <FrameLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/buttonHorizontalMargin">
 
                     <br.com.simplepass.loading_button_lib.customViews.CircularProgressImageButton
@@ -146,7 +151,7 @@
                         android:adjustViewBounds="true"
                         android:src="@drawable/ic_confused"
                         android:onClick="didTapYellowButton"
-                        app:spinning_bar_padding="10dp"
+                        app:spinning_bar_padding="15dp"
                         app:spinning_bar_color="@color/yellow"/>
                 </FrameLayout>
 
@@ -154,7 +159,7 @@
                 <FrameLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/buttonHorizontalMargin">
 
                     <br.com.simplepass.loading_button_lib.customViews.CircularProgressImageButton
@@ -166,11 +171,10 @@
                         android:adjustViewBounds="true"
                         android:src="@drawable/ic_bored"
                         android:onClick="didTapRedButton"
-                        app:spinning_bar_padding="10dp"
+                        app:spinning_bar_padding="15dp"
                         app:spinning_bar_color="@color/red"/>
                 </FrameLayout>
             </LinearLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/current_session_progress"
